<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/textViewFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fin_partie"
        android:textSize="@dimen/text_calcul"
        app:layout_constraintBottom_toBottomOf="@id/textVotreNom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVotreNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_votre_nom"
        android:textSize="@dimen/text_calcul"
        app:layout_constraintBottom_toBottomOf="@id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewFin" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_votre_nom"
        android:textSize="@dimen/edit_name"
        app:layout_constraintBottom_toBottomOf="@id/buttonEnvoyer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textVotreNom" />

    <Button
        android:id="@+id/buttonEnvoyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_envoyer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textVotreNom" />
</androidx.constraintlayout.widget.ConstraintLayout>